# threisd-telegram-chatbot

./: .gitignore  Cargo.toml  README.md  pm2-job.json
.github/workflows/: rust.yml
migrations/2024-02-10-140717_create_users/: up.sql
migrations/2024-03-13-090300_create_users/: up.sql
src/: bot.rs  commands.rs  constants.rs  main.rs  schema.rs  threisd.rs  types.rs
src/configs/: database_config.rs  mod.rs
src/constants/: env_constants.rs  mod.rs
src/handlers/: authen.rs  callback_handlers.rs  inline_query_handlers.rs  message_handlers.rs  mod.rs  test_command.rs
src/models/: mod.rs  user.rs
src/states/: mod.rs  registry_state.rs
