[package]
name = "threisd-telegram-bot"
version = "0.1.0"
authors = ["Bristle Vu <vuminhthanh8501@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.31"
dotenvy = "0.15.7"
env_logger = "0.10.1"
log = "0.4.20"
ngrok = { version = "0.13.1", features = ["axum"] }
teloxide = { version = "0.12.2", features = ["macros", "webhooks","webhooks-axum"] }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
