[package]
name = "threisd-telegram-bot"
version = "0.1.0"
authors = ["Bristle Vu <vuminhthanh8501@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.35"
diesel = { version = "2.1.4", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.21"
log4rs = "1.3.0"
ngrok = { version = "0.13.1", features = ["axum"] }
serde = "1.0.197"
teloxide = { version = "0.12.2", features = ["macros", "webhooks", "webhooks-axum"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
